--- a/04-servlet/params/src/main/webapp/index.html
+++ b/04-servlet/params/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<form action="/hello" method="get">
+<form action="hello" method="get">
     <label for="name">Name:</label>
     <input name="name" id="name" type="text"/><br>
     <input type="submit" value="Greet Me!"/>
